# triton-inference-server-ge-backend

./: CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Third_Party_Open_Source_Software_List.yaml  build.sh
docs/: CN_CLIP模型优化示例.md  README.md  快速入门.md  性能调优方法论.md  问题定位.md
docs/tools/: DumpGE.md  Plog.md  Profiling.md
example/: README.md  client.py
example/cnclip_full/: config.pbtxt
example/cnclip_simple/: config.pbtxt
example/image/: config.pbtxt
example/image/1/: config.pbtxt
example/resnet/: config.pbtxt
example/text/: config.pbtxt
include/: inference.h  model_instance_state.h  model_state.h  scheduler.h  utils.h
src/: inference.cpp  model_instance_state.cpp  model_state.cpp  npu_ge.cpp  scheduler.cpp
